# lintian-brush

./: .bzrignore  .flake8  .gitignore  .mailmap  .testr.conf  .travis.yml  AUTHORS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.apply-multiarch-hints  Dockerfile.deb-scrub-obsolete  Dockerfile.debianize  Dockerfile.lintian-brush  HACKING.md  MANIFEST.in  Makefile  README.md  TODO  deny.toml  download-license-data.py  find-old-info-format-tags.py  goals.md  key-package-versions.json  key-package-versions.py  lintian_brush.py  next.py  pyproject.toml  renamed-tags.json  renamed-tags.py  setup.cfg  setup.py  spdx.json  tag-status.py  tag-status.yaml
analyzer/: Cargo.toml  build.rs  key-package-versions.json  key-package-versions.py
analyzer/src/: abstract_control.rs  benfile.rs  changelog.rs  config.rs  control.rs  debcargo.rs  debcommit.rs  debhelper.rs  debmutateshim.rs  detect_gbp_dch.rs  editor.rs  lib.rs  lintian.rs  maintscripts.rs  patches.rs  publish.rs  relations.rs  release_info.rs  rules.rs  salsa.rs  snapshot.rs  svp.rs  transition.rs  udd.rs  vcs.rs  vendor.rs  versions.rs  wnpp.rs
debianize/: Cargo.toml  DESIGN.md  README.md  TROUBLESHOOTING.md
debianize-py/: Cargo.toml
debianize-py/src/: lib.rs
debianize/.cargo/: config.toml
debianize/src/: fixer.rs  lib.rs  main.rs  names.rs  processors.rs  simple_apt_repo.rs  vcs.rs
debianize/tests/: common.rs  debian_control_bug_test.rs  exact_file_tests.rs  integration_tests.rs  python_package_test.rs  recursive_tests.rs  simple_integration_test.rs  test_build_system_detection.rs  test_buildsystem_names.rs  test_cargo_processor.rs  test_error_handling.rs  test_go_fix.rs  test_go_processor.rs  test_nodejs_processor.rs  test_python_processor.rs  test_recursive_debianization.rs  test_recursive_debianization_simple.rs  test_recursive_packaging.rs  test_recursive_simple.rs  test_session_preferences.rs  test_vcs_integration.rs  unit_tests.rs
desktop-edit/: Cargo.toml  README.md
desktop-edit/src/: desktop.rs  lex.rs  lib.rs  parse.rs
import-uncommitted/: Cargo.toml
import-uncommitted/src/: main.rs
lintian-brush/: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  find-old-info-format-tags.py  fixer-writing-guide.rst  goals.md  next.py  renamed-tags.json  renamed-tags.py  tag-status.py  tag-status.yaml
lintian-brush-py/: Cargo.toml
lintian-brush-py/src/: lib.rs
lintian-brush/examples/: builtin_fixer.rs
lintian-brush/fixers/: ancient-maintscript-entry.py  ancient-python-version-field.py  autotools-pkg-config-macro-not-cross-compilation-safe.py  binary-control-field-duplicates-source.py  build-depends-on-build-essential.py  built-using-for-golang.py  comma-separated-files-in-dep5-copyright.py  common-license.py  copyright-continued-lines-with-space.py  copyright-format-uri.py  copyright-has-crs.sh  copyright-missing-upstream-info.py  copyright-refers-to-symlink-license.py  debhelper-but-no-misc-depends.py  debian-changelog-has-wrong-day-of-week.py  debian-changelog-line-too-long.py  debian-control-has-empty-field.py  debian-control-has-obsolete-dbg-package.py  debian-control-has-unusual-field-spacing.py  debian-pycompat-is-obsolete.sh  debian-rules-missing-recommended-target.py  debian-rules-not-executable.py  debian-rules-parses-dpkg-parsechangelog.py  debian-rules-sets-dpkg-architecture-variable.py  debian-rules-should-not-use-pwd.py  debian-rules-uses-special-shell-variable.py  debian-rules-uses-unnecessary-dh-argument.py  debian-source-options-has-custom-compression-settings.py  debian-watch-file-old-format.py  debian-watch-uses-insecure-uri.py  debug-symbol-migration-possibly-complete.py  declares-possibly-conflicting-debhelper-compat-versions.py  dep3-format-patch-author-or-from-is-better.py  dep5-file-paragraph-references-header-paragraph.py  desktop-entry-contains-encoding-key.py  dh-clean-k-is-deprecated.py  empty-debian-patches-series.py  empty-debian-tests-control.py  excessive-priority-for-library-package.py  extended-description-contains-empty-paragraph.py  (+65 more)
lintian-brush/fixers/slow/: multiarch-hints.py
lintian-brush/src/: builtin_fixers.rs  debhelper.rs  debianshim.rs  fixer_tests.rs  lib.rs  licenses.rs  lintian_overrides.rs  macros.rs  py.rs  release_info.rs  rules.rs  upstream_metadata.rs  vcs.rs  watch.rs
lintian-brush/src/fixers/: README.md  ancient_maintscript_entry.rs  ancient_python_version_field.rs  autotools_pkg_config_macro_not_cross_compilation_safe.rs  binary_control_field_duplicates_source.rs  build_depends_on_build_essential.rs  build_depends_on_obsolete_package.rs  built_using_for_golang.rs  changelog_has_duplicate_line.rs  chown_with_dot.rs  circular_installation_prerequisite.rs  comma_separated_files_in_dep5_copyright.rs  common_license.rs  copyright_continued_lines_with_space.rs  copyright_format_uri.rs  copyright_has_crs.rs  copyright_missing_upstream_info.rs  copyright_refers_to_symlink_license.rs  crlf_line_endings.rs  debhelper_but_no_misc_depends.rs  debhelper_compat_wrong_field.rs  debhelper_tools_from_autotools_dev_are_deprecated.rs  debian_changelog_file_contains_obsolete_user_emacs_settings.rs  debian_changelog_has_wrong_day_of_week.rs  debian_changelog_line_too_long.rs  debian_control_has_empty_field.rs  debian_control_has_obsolete_dbg_package.rs  debian_control_has_unusual_field_spacing.rs  debian_pycompat_is_obsolete.rs  debian_pyversions_is_obsolete.rs  debian_rules_contains_unnecessary_get_orig_source_target.rs  debian_rules_missing_recommended_target.rs  debian_rules_not_executable.rs  (+140 more)
lintian-brush/tests/: README.md
lintian-overrides/: Cargo.toml
lintian-overrides/src/: lib.rs
multiarch-hints/: Cargo.toml
multiarch-hints/src/: lib.rs  main.rs
scrub-obsolete/: Cargo.toml
scrub-obsolete/src/: action.rs  dummy_transitional.rs  lib.rs  package_checker.rs
systemd-unit-edit/: Cargo.toml  README.md
systemd-unit-edit/src/: dropin.rs  lex.rs  lib.rs  parse.rs  specifier.rs  systemd_metadata.rs  timespan.rs  unit.rs
transition-apply/: Cargo.toml
transition-apply/src/: lib.rs  main.rs
yaml-edit/: Cargo.toml
yaml-edit/src/: lib.rs
(+1475 files in other folders)
