[workspace]
# With resolve set to "2", dependent projects can't find debian-analyzer anymore.
resolver = "1"
members = ["lintian-brush", "multiarch-hints", "scrub-obsolete", "transition-apply", "import-uncommitted", "debianize"]

[workspace.package]
version = "0.163.0"

[workspace.dependencies]
breezyshim = { version = "0.7.8", features = ["dirty-tracker"] }
pyo3 = ">=0.27,<0.29"
debversion = "0.5"
serde_yaml = ">=0.9"
reqwest = ">=0.12"
log = "0.4"
lazy_static = "1"
serde = "1"
chrono = ">=0.4"
lazy-regex = "=3"
env_logger = ">=0.11,<0.12"
clap = "4,<5"
serde_json = "1"
tempfile = "3"
configparser = "3"
url = "2"
debian-copyright = "0.1.41"
debian-changelog = "0.2.13"
debian-control = ">=0.3.6,<0.4"
deb822-lossless = "0.5.5"
pyo3-log = ">=0.12,<0.14"
maplit = "1"
buildlog-consultant = "0.0.43"
upstream-ontologist = "0.3.10"
sqlx = "0.8"
semver = "1"
toml_edit = ">=0.22,<0.29"
tokio = "1.39"
debian-analyzer = { version = "0.160.11" }
svp-client = "0.2.0"
regex = "1"
indexmap = "2.7"
makefile-lossless = "0.3.28"
serial_test = ">=2, <4"
debian-watch = "0.4.3"
#debian-control = { path = "../deb822-lossless/debian-control" }
#deb822-lossless = { path = "../deb822-lossless" }
systemd-unit-edit = "0.1.1"
desktop-edit = "0.1.0"
yaml-edit = "0.2"
