[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools-rust",
    "breezy>=3.3.0.dev.0",
    "python_debian",
    "debmutate",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "psycopg2.*",
    "distro_info.*",
    "decopy.*",
    "gpg.*",
    "iniparse.*",
    "configobj.*",
    "xdg.*",
    "Levenshtein.*",
    "semver.*",
]
ignore_missing_imports = true

[project]
name = "lintian-brush"
authors = [{name = "Jelmer Vernooĳ", email = "jelmer@debian.org"}]
description = "Automatic lintian issue fixer"
requires-python = ">=3.7"
dependencies = [
    "breezy>=3.3.0.dev.0",
    "python_debian",
    "debmutate[watch,debcargo]",
    "distro-info",
    "upstream-ontologist[readme,pyproject,setup.cfg,debian_rules,debian_watch,debian_changelog,cargo]>=0.1.29",
    "tqdm",
    "ruamel.yaml",
    "psycopg2",
    "semver",
    "tomlkit",
    "python_Levenshtein",
    "iso8601",
    "iniparse",
    "pyinotify",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://salsa.debian.org/jelmer/lintian-brush"
Repository = "https://salsa.debian.org/jelmer/lintian-brush"

[project.optional-dependencies]
debianize = [
    "ognibuild>=0.0.18",
    "buildlog-consultant",
]

[project.scripts]
debianize = "lintian_brush.debianize:main"
lintian-brush = "lintian_brush.__main__:main"
apply-multiarch-hints = "lintian_brush.multiarch_hints:main"
deb-scrub-obsolete = "lintian_brush.scrub_obsolete:main"
deb-vcs-publish = "lintian_brush.publish:main"
detect-changelog-behaviour = "lintian_brush.detect_gbp_dch:main"
fix-watch-file = "lintian_brush.watch:main"

[tool.setuptools]
packages = ["lintian_brush"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "lintian_brush.__version__"}
