[mypy]
ignore_missing_imports = True

[flake8]
banned-modules = dulwich = Use breezy rather than dulwich directly

[metadata]
name = lintian-brush
version = attr:lintian_brush.__version__
author = Jelmer Vernooĳ
author_email = jelmer@debian.org
project_urls =
    Repository=https://salsa.debian.org/jelmer/lintian-brush
url = https://salsa.debian.org/jelmer/lintian-brush
description = Automatic lintian issue fixer

[options]
install_requires =
    breezy>=3.3.0.dev.0
    python_debian
    debmutate
    distro-info
    upstream-ontologist[readme,pyproject,setup.cfg,debian_rules,debian_watch,cargo]
    tqdm
    ruamel.yaml
    asyncpg
    semver
    tomlkit
    python_Levenshtein
    iso8601
    iniparse
    pyinotify
packages = lintian_brush

[options.entry_points]
console_scripts =
    debianize=lintian_brush.debianize:main
    lintian-brush=lintian_brush.__main__:main
    apply-multiarch-hints=lintian_brush.multiarch_hints:main
    deb-scrub-obsolete=lintian_brush.scrub_obsolete:main
