[metadata]
name = lintian-brush
version = attr:lintian_brush.__version__
author = Jelmer Vernooĳ
author_email = jelmer@debian.org
project_urls =
    Repository=https://salsa.debian.org/jelmer/lintian-brush
url = https://salsa.debian.org/jelmer/lintian-brush
description = Automatic lintian issue fixer

[options]
python_requires = >=3.7
install_requires =
    breezy>=3.3.0.dev.0
    python_debian
    debmutate[watch,debcargo]
    distro-info
    upstream-ontologist[readme,pyproject,setup.cfg,debian_rules,debian_watch,debian_changelog,cargo]>=0.1.29
    tqdm
    ruamel.yaml
    asyncpg
    semver
    tomlkit
    python_Levenshtein
    iso8601
    iniparse
    pyinotify
setup_requires =
    breezy>=3.3.0.dev.0
    python_debian
    debmutate
packages = lintian_brush

[options.extras_require]
debianize =
    ognibuild>=0.0.18
    buildlog-consultant

[options.entry_points]
console_scripts =
    debianize=lintian_brush.debianize:main
    lintian-brush=lintian_brush.__main__:main
    apply-multiarch-hints=lintian_brush.multiarch_hints:main
    deb-scrub-obsolete=lintian_brush.scrub_obsolete:main
    deb-vcs-publish=lintian_brush.publish:main
    detect-changelog-behaviour=lintian_brush.detect_gbp_dch:main
    fix-watch-file=lintian_brush.watch:main
