[package]
name = "debian-analyzer"
version = "0.158.26"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-2.0+"
description = "Debian analyzer"
repository = "https://salsa.debian.org/jelmer/lintian-brush.git"
homepage = "https://salsa.debian.org/jelmer/lintian-brush"
documentation = "https://docs.rs/debian-analyzer"

[dependencies]
pyo3 = { workspace = true, features = ["serde", "chrono"] }
debversion = { workspace = true, features = ["serde", "python-debian"] }
log = { workspace = true }
lazy-regex.workspace = true
serde = { workspace = true, features = ["derive"] }
breezyshim = { workspace = true, features = ["debian"] }
configparser.workspace = true
clap = { workspace = true, features = ["derive", "env", "suggestions", "cargo", "string"], optional = true }
env_logger = { workspace = true, optional = true }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
distro-info = { version = ">=0.4.0" }
url = { workspace = true }
tempfile.workspace = true
maplit = "1.0.2"
lazy_static = { workspace = true }
debian-changelog = { workspace = true }
debian-control = { workspace = true }
debian-copyright = { workspace = true }
makefile-lossless = "0.2.0"
patchkit = "0.2.1"
dep3 = "0.1.0"
reqwest = { workspace = true, features = ["blocking", "json"] }
merge3 = { version = "0.2", optional = true }
difflib = "0.4.0"
deb822-lossless = { workspace = true }
toml_edit = { workspace = true }
semver = { workspace = true }
sqlx = { workspace = true, optional = true, features = ["postgres"] }
filetime = "0.2"
sha1 = "0.10.6"
hex = "0.4.3"
svp-client = { workspace = true, optional = true }

[features]
svp = ["dep:svp-client"]
default = ["python", "merge3"]
python = []
cli = ["dep:clap", "dep:env_logger"]
merge3 = ["dep:merge3"]
udd = ["dep:sqlx"]

[lib]

[[bin]]
name = "detect-changelog-behaviour"
path = "src/bin/detect-changelog-behaviour.rs"
required-features = ["cli"]

[[bin]]
name = "deb-vcs-publish"
path = "src/bin/deb-vcs-publish.rs"
required-features = ["cli"]

[build-dependencies]
quote = "1.0.37"
serde_json.workspace = true

[dev-dependencies]
serial_test = ">=2"
