[package]
name = "debianize-py"
version = { workspace = true }
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://salsa.debian.org/jelmer/lintian-brush"
homepage = "https://salsa.debian.org/jelmer/lintian-brush"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
pyo3-log = ">=0.5"
debianize = { version = ">=0.154.0", path = "../debianize" }
