[package]
name = "debianize-py"
version = { workspace = true }
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://salsa.debian.org/jelmer/lintian-brush"
homepage = "https://salsa.debian.org/jelmer/lintian-brush"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
pyo3-log = { workspace = true }
debianize = { version = ">=0.154.0", path = "../debianize", features = ["pyo3"] }
debversion = { workspace = true }
url.workspace = true
