[package]
name = "debianize"
version = { workspace = true }
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-2.0+"
description = "Create Debian packaging from upstream sources"
repository = "https://salsa.debian.org/jelmer/lintian-brush.git"
homepage = "https://salsa.debian.org/jelmer/lintian-brush"
documentation = "https://docs.rs/debianize"

[dependencies]
breezyshim.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
debian-analyzer = { version = ">=0.154.0", path = "../analyzer", features = ["udd"] }
debian-changelog.workspace = true
distro-info = "0.4.0"
env_logger.workspace = true
log.workspace = true
pyo3.workspace = true
xdg = "2.5.2"
debversion.workspace = true
url.workspace = true
#ognibuild = ">=0.0.24"
ognibuild = { version = ">=0.0.25", features = ["upstream", "debian"] }
hyper = { version = "0.14", features = ["full", "runtime", "server"] }
flate2 = "1"
tokio = { workspace = true, features = ["full", "rt", "signal"] }
tempfile.workspace = true
upstream-ontologist.workspace = true
buildlog-consultant.workspace = true
lazy-regex.workspace = true
lintian-brush = { path = "../lintian-brush", version = ">=0.155.0", default-features = false, features = ["python"] }
debian-control.workspace = true
lazy_static = { workspace = true }
semver = { workspace = true }
toml_edit = { workspace = true }
serde.workspace = true
sqlx.workspace = true
svp-client.workspace = true

[features]
pyo3 = []

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
tempfile.workspace = true

[[bin]]
name = "debianize"
path = "src/main.rs"
