[package]
name = "debianize"
version = "0.163.0"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-2.0+"
description = "Create Debian packaging from upstream sources"
repository = "https://salsa.debian.org/jelmer/lintian-brush.git"
homepage = "https://salsa.debian.org/jelmer/lintian-brush"
documentation = "https://docs.rs/debianize"

[dependencies]
breezyshim = { workspace = true, features = ["debian"] }
cargo-lock = "10"
clap = { version = "4", features = ["derive", "env"] }
debian-analyzer = { workspace = true, features = ["udd", "svp"] }
debian-changelog = "0.2.1"
distro-info = "0.4.0"
env_logger = "0.10"
log = "0.4"
pyo3 = ">=0.25,<0.26"
xdg = "2.5.2"
debversion = ">=0.4.0"
url = "2"
#ognibuild = ">=0.0.24"
ognibuild = { version = ">=0.1.1", features = ["upstream", "debian"] }
hyper = { version = "1.5", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"], default-features = false }
http-body-util = "0.1"
flate2 = "1"
tokio = { version = "1", features = ["full", "rt", "signal", "net", "macros"] }
tempfile = "3"
upstream-ontologist = ">=0.1.0"
buildlog-consultant = ">=0.1.0"
lazy-regex = ">=2"
lintian-brush = { path = "../lintian-brush", version = ">=0.155.0", default-features = false, features = ["python"] }
debian-control = ">=0.1.0"
lazy_static = "1"
semver = "1"
toml_edit = "0.23"
serde = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
svp-client = ">=0.1.0"
chrono = "0.4"

[features]
pyo3 = []

[dev-dependencies]
reqwest = { version = ">=0.11", features = ["blocking"] }
tempfile = "3"
json = "0.12"
serde_json = "1.0"

[[bin]]
name = "debianize"
path = "src/main.rs"
