[package]
name = "desktop-edit"
version = "0.1.1"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
license = "Apache-2.0"
description = "A lossless parser and editor for .desktop files"
keywords = ["desktop", "freedesktop", "parser", "lossless", "xdg"]
categories = ["parser-implementations"]
homepage = "https://github.com/jelmer/desktop-edit-rs"

[dependencies]
rowan = "0.16"
