[package]
name = "import-uncommitted"
edition = "2021"
version.workspace = true

[dependencies]
breezyshim = { workspace = true, features = ["debian", "sqlx"] }
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
debian-analyzer = { workspace = true, features = ["udd", "svp"] }
debian-changelog.workspace = true
debian-control.workspace = true
debversion.workspace = true
env_logger.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
svp-client.workspace = true
tempfile.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
serial_test.workspace = true

[[bin]]
name = "deb-import-uncommitted"
path = "src/main.rs"
