[package]
name = "lintian-brush-py"
version = { workspace = true }
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://salsa.debian.org/jelmer/lintian-brush"
homepage = "https://salsa.debian.org/jelmer/lintian-brush"

[lib]
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true, features = ["chrono", "serde"] }
lintian-brush = { path = "../lintian-brush" }
serde_json = "1"
chrono = "0.4"
pyo3-log = ">=0.9"
debversion = { workspace = true, features = ["python-debian"] }
breezyshim = { workspace = true }
debian-analyzer = { version = ">=0.154.0", path = "../analyzer", default-features = false }
debianize = { version = ">=0.154.0", path = "../debianize" }

[package.metadata.cargo-all-features]
denylist = ["extension-module"]
