[package]
name = "lintian-brush"
version = "0.158.19"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-2.0+"
description = "Automatic lintian issue fixer"
repository = "https://salsa.debian.org/jelmer/lintian-brush.git"
homepage = "https://salsa.debian.org/jelmer/lintian-brush"
documentation = "https://docs.rs/lintian-brush"
default-run = "lintian-brush"

[dependencies]
pyo3 = { workspace = true, features = ["serde", "chrono"], optional = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
log = { workspace = true }
configparser.workspace = true
clap = { workspace = true, features = ["derive", "env", "suggestions", "cargo", "string"], optional = true }
env_logger = { workspace = true, optional = true }
lazy-regex = { workspace = true }
debversion = { workspace = true }
breezyshim = { workspace = true }
indicatif = "0.17"
tempfile = { workspace = true }
url = { version = "2", features = ["serde"] }
lazy_static = { workspace = true }
debian-analyzer = { path = "../analyzer", version = ">=0.158.19" }
distro-info = "0.4.0"
debian-changelog = { workspace = true }
wait-timeout = "0.2.0"
humantime = "2.1.0"
svp-client = { workspace = true }

[dev-dependencies]
fs_extra = "1.3.0"
maplit = { workspace = true }

[features]
default = ["svp", "python", "cli"]
svp = []
python = ["dep:pyo3", "debian-analyzer/python"]
cli = ["dep:clap", "dep:env_logger"]

[[bin]]
name = "lintian-brush"
required-features = ["cli"]

[build-dependencies]
quote = "1.0.37"
serde.workspace = true
serde_yaml.workspace = true

[package.metadata.cargo-all-features]
max_combination_size = 2
