[package]
name = "lintian-brush"
version = "0.158.19"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-2.0+"
description = "Automatic lintian issue fixer"
repository = "https://salsa.debian.org/jelmer/lintian-brush.git"
homepage = "https://salsa.debian.org/jelmer/lintian-brush"
documentation = "https://docs.rs/lintian-brush"
default-run = "lintian-brush"

[dependencies]
pyo3 = { workspace = true, features = ["serde", "chrono"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
configparser.workspace = true
clap = { workspace = true, features = ["derive", "env", "suggestions", "cargo", "string"], optional = true }
lazy-regex = { workspace = true }
debversion = { workspace = true }
debian-copyright = { workspace = true }
breezyshim = { workspace = true }
indicatif = ">=0.17,<0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi"] }
tracing-log = "0.2"
nu-ansi-term = "0.50"
tempfile = { workspace = true }
url = { version = "2", features = ["serde"] }
reqwest = { workspace = true, features = ["blocking"] }
lazy_static = { workspace = true }
debian-analyzer = { workspace = true, features = ["svp", "udd"] }
debian-control = { workspace = true }
deb822-lossless = { workspace = true }
distro-info = "0.4.0"
debian-changelog = { workspace = true }
desktop-edit = { path = "../desktop-edit", version = "0.1.0" }
wait-timeout = "0.2.0"
humantime = "2.1.0"
svp-client = { workspace = true }
inventory = "0.3"
regex = { workspace = true }
indexmap = { workspace = true }
sequoia-openpgp = "2"
makefile-lossless = { workspace = true }
sha1 = "0.10"
shell-words = "1"
debian-watch = { version = "0.2.17", features = ["discover", "blocking", "pgp"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"], optional = true }
upstream-ontologist = { workspace = true }
dep3 = "0.2.0"
patchkit = "0.2.2"
rowan = "0.16"
strsim = "0.11"
futures = "0.3"
debbugs = { version = "0.1.8", features = ["blocking"] }
textwrap = "0.16"
toml_edit = { workspace = true }
systemd-unit-edit = { path = "../systemd-unit-edit", version = "0.1.3" }
yaml-edit = { path = "../yaml-edit", version = "0.1.0" }

[dev-dependencies]
fs_extra = "1.3.0"
maplit = { workspace = true }

[features]
default = ["svp", "python", "cli"]
svp = []
python = ["debian-analyzer/python"]
cli = ["dep:clap"]
udd = ["debian-analyzer/udd", "dep:sqlx"]

[[bin]]
name = "lintian-brush"
required-features = ["cli"]

[[bin]]
name = "find-old-info-format-tags"
required-features = ["udd"]

[[bin]]
name = "tag-status"
required-features = ["cli"]

[build-dependencies]
quote = "1.0.37"
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true

[package.metadata.cargo-all-features]
max_combination_size = 2
