[package]
name = "multiarch-hints"
version = { workspace = true }
edition = "2021"

[dependencies]
chrono = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
xz2 = "0.1"
lintian-brush = { path = ".." }
debversion = { workspace = true, features = ["serde"] }
pyo3 = { version = "0.19", features = ["auto-initialize"]}
lazy-regex = { workspace = true }
breezyshim.workspace = true
clap.workspace = true
serde_json.workspace = true
tempfile.workspace = true
env_logger.workspace = true
url = "2.4.1"
