[package]
name = "multiarch-hints"
version = { workspace = true }
edition = "2021"
documentation = "https://docs.rs/multiarch-hints"
repository = "https://salsa.debian.org/jelmer/lintian-brush"
description = "Apply multiarch hints to Debian packages"
license = "GPL-2.0+"

[dependencies]
chrono = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
xz2 = "0.1"
debian-analyzer = { path = "../analyzer", version = ">=0.158", features = ["svp"] }
debversion = { workspace = true, features = ["serde"] }
pyo3 = { workspace = true }
lazy-regex = { workspace = true }
breezyshim.workspace = true
serde_json.workspace = true
tempfile.workspace = true
env_logger = { workspace = true, optional = true }
url = { workspace = true }
configparser.workspace = true
clap = { workspace = true, features = ["derive", "env", "suggestions", "cargo", "string"], optional = true }
debian-changelog.workspace = true
debian-control.workspace = true
deb822-lossless = "0.2.1"
svp-client = { workspace = true }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:env_logger"]

[[bin]]
name = "apply-multiarch-hints"
path = "src/main.rs"
required-features = ["cli"]
